k8s/kustomize/service-a/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: a
  labels:
    istio-injection: enabled
