k8s/kustomize/service-a/service.yaml
# service
---
apiVersion: v1
kind: Service
metadata:
  name: service-a
spec:
  selector:
    app: service-a
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
